--- a/openavatar-build-api/src/main/resources/application.yml
+++ b/openavatar-build-api/src/main/resources/application.yml
@@ -13,8 +13,8 @@ spring:
       auto-commit: false
       
 # Mybtis
-mybatis:
-  # mapper.xml 위치 설정
-  mapper-locations: classpath:com/skt/treal/openavatar/build/api/persist/**/*.xml
-  # 패키지 명을 생략할 수 있도록 alias 설정
-  type-aliases-package: com.skt.treal.openavatar.build.api.model.domain
+#mybatis:
+#  # mapper.xml 위치 설정
+#  mapper-locations: classpath:/mappers/*.xml
+#  # 패키지 명을 생략할 수 있도록 alias 설정
+#  type-aliases-package: com.skt.treal.openavatar.build.api.model.domain
