--- a/openavatar-build-api/pom.xml
+++ b/openavatar-build-api/pom.xml
@@ -207,7 +207,7 @@
 									<includes>
 										<include>*.yml</include>
 										<include>*.txt</include>
-										<include>*.xml</include>
+										<include>**/*.xml</include>
 										<include>**/*.html</include>
 										<include>**/*.js</include>
 										<include>**/*.css</include>
