--- a/openavatar-build-api/src/main/resources/application.yml
+++ b/openavatar-build-api/src/main/resources/application.yml
@@ -15,6 +15,6 @@ spring:
 # Mybtis
 mybatis:
   # mapper.xml 위치 설정
-  mapper-locations: mappers/*.xml
+  mapper-locations: mappers/**/*.xml
   # 패키지 명을 생략할 수 있도록 alias 설정
   type-aliases-package: com.skt.treal.openavatar.build.api.model.domain
