--- a/openavatar-build-api/src/main/resources/application-local.yml
+++ b/openavatar-build-api/src/main/resources/application-local.yml
@@ -29,7 +29,7 @@ spring:
     
 open-avatar:
   storage:
-    temp-zip-dir: E:\A-OpenAvatar_tempFile\TRP_TEMP_FILE
+    temp-zip-dir: E:\A-OpenAvatar_tempFile\Z-Release\TRP_TEMP_FILE
     trp-file-name: Jump
     default-path: E:\A-OpenAvatar_tempFile
     template-dir: /template/
